--- a/package.json
+++ b/package.json
@@ -8,5 +8,12 @@
   "dependencies": {
     "elm": "^0.19.1-3",
     "parcel": "^1.12.4"
+  },
+  "scripts": {
+    "start": "parcel watch src/index.html"
+  },
+  "devDependencies": {
+    "elm-hot": "^1.1.4",
+    "node-elm-compiler": "^5.0.4"
   }
 }
