--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "parcel": "^1.12.4"
   },
   "scripts": {
-    "start": "parcel src/index.html"
+    "start": "parcel src/index.html",
+    "build": "parcel build src/index.html"
   },
   "devDependencies": {
     "elm-hot": "^1.1.4",
