--- a/package.json
+++ b/package.json
@@ -6,15 +6,16 @@
   "author": "Yoav Luft <luft@kth.se>",
   "license": "MIT",
   "dependencies": {
-    "elm": "^0.19.1-3",
-    "parcel": "^1.12.4"
   },
   "scripts": {
     "start": "parcel src/index.html",
     "build": "parcel build src/index.html"
   },
   "devDependencies": {
+    "elm": "^0.19.1-3",
+    "parcel": "^1.12.4",
     "elm-hot": "^1.1.4",
-    "node-elm-compiler": "^5.0.4"
+    "node-elm-compiler": "^5.0.4",
+    "parcel-bundler": "^1.12.4"
   }
 }
