--- a/package.json
+++ b/package.json
@@ -5,17 +5,18 @@
   "main": "src/index.js",
   "author": "Yoav Luft <luft@kth.se>",
   "license": "MIT",
-  "dependencies": {
-  },
+  "dependencies": {},
   "scripts": {
     "start": "parcel src/index.html",
     "build": "parcel build src/index.html"
   },
   "devDependencies": {
     "elm": "^0.19.1-3",
-    "parcel": "^1.12.4",
     "elm-hot": "^1.1.4",
     "node-elm-compiler": "^5.0.4",
-    "parcel-bundler": "^1.12.4"
-  }
+    "parcel": "^1.12.4",
+    "parcel-bundler": "^1.12.4",
+    "parcel-plugin-asset-copier": "^1.0.0"
+  },
+  "assetsPath": "data/images"
 }
